--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ sudo: false
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator10.1 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
