--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ sudo: false
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator10.1 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator9.3 -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.3' ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator10.1 -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
