--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,9 +9,8 @@ target 'MyLibrary_Example' do
 
   target 'MyLibrary_Tests' do
     inherit! :search_paths
-
-#pod 'Specta'
-    # pod 'Expecta'
+    pod 'Specta'
+     pod 'Expecta'
   end
 end
 
